# pico2-controller2nintendoswitch-adapter

./: CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake  switch_bridge_pico.uf2  tusb_config.h
.github/workflows/: main.yml
